--- a/Other.conf
+++ b/Other.conf
@@ -1,44 +1,17 @@
-{\rtf1\ansi\ansicpg936\cocoartf2513
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fnil\fcharset0 HelveticaNeue;\f1\fnil\fcharset134 PingFangSC-Regular;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww10800\viewh8400\viewkind0
-\deftab560
-\pard\pardeftab560\slleading20\pardirnatural\partightenfactor0
+hostname = ap?.bilibili.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, ios-*.prod.ftl.netflix.com, ios.prod.ftl.netflix.com
 
-\f0\fs24 \cf0 hostname = ap?.bilibili.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, ios-*.prod.ftl.netflix.com, ios.prod.ftl.netflix.com\
-\
-#
-\f1 \'df\'d9\'c1\'a8\'df\'d9\'c1\'a8
-\f0 , 
-\f1 \'b8\'db\'b0\'c4\'cc\'a8\'b7\'ac\'be\'e7\'d7\'d4\'b6\'af\'c7\'d0\'bb\'bb\'b5\'d8\'c7\'f8
-\f0  & 
-\f1 \'cf\'d4\'ca\'be\'b6\'b9\'b0\'ea\'c6\'c0\'b7\'d6
-\f0 \
-^https:\\/\\/ap(p|i)\\.bilibili\\.com\\/(pgc\\/view\\/(v\\d\\/)?app|x(\\/v\\d)?\\/view\\/video)\\/(season|online)\\?access_key url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js\
-#
-\f1 \'bf\'c9\'d1\'a1
-\f0 , 
-\f1 \'ca\'ca\'d3\'c3\'d3\'da\'cb\'d1\'cb\'f7\'d6\'b8\'b6\'a8\'b5\'d8\'c7\'f8\'b5\'c4\'b7\'ac\'be\'e7
-\f0 \
-^https:\\/\\/app\\.bilibili\\.com\\/x\\/v\\d\\/search(\\/type)?\\?.+?%20(%E6%B8%AF|%E5%8F%B0|%E4%B8%AD)& url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js\
-\
-# 
-\f1 \'be\'a9\'b6\'ab\'b1\'c8\'bc\'db
-\f0 \
-^https?://api\\.m\\.jd\\.com/client\\.action\\?functionId=(wareBusiness|serverConfig|basicConfig) - script-response-body https://raw.githubusercontent.com/JDHelloWorld/jd_price/main/jd_price.js\
-\
-#
-\f1 \'c6\'c1\'b1\'ce\'ce\'a2\'b2\'a9\'b9\'e3\'b8\'e6
-\f0 \
-^https?://(sdk|wb)app\\.uve\\.weibo\\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js\
-^https?://m?api\\.weibo\\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js\
-\
-#
-\f1 \'cf\'d4\'ca\'be
-\f0 NF
-\f1 \'c6\'c0\'b7\'d6
-\f0 \
-^https?://ios\\.prod\\.ftl\\.netflix\\.com/iosui/user/.+path=%5B%22videos%22%2C%\\d+%22%2C%22summary%22%5D url script-request-header https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js\
-^https?://ios\\.prod\\.ftl\\.netflix\\.com/iosui/user/.+path=%5B%22videos%22%2C%\\d+%22%2C%22summary%22%5D url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js\
-}
+#哔哩哔哩, 港澳台番剧自动切换地区 & 显示豆瓣评分
+^https:\/\/ap(p|i)\.bilibili\.com\/(pgc\/view\/(v\d\/)?app|x(\/v\d)?\/view\/video)\/(season|online)\?access_key url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
+#可选, 适用于搜索指定地区的番剧
+^https:\/\/app\.bilibili\.com\/x\/v\d\/search(\/type)?\?.+?%20(%E6%B8%AF|%E5%8F%B0|%E4%B8%AD)& url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
+
+# 京东比价
+^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) - script-response-body https://raw.githubusercontent.com/JDHelloWorld/jd_price/main/jd_price.js
+
+#屏蔽微博广告
+^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
+^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
+
+#显示NF评分
+^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
+^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
