--- a/GetCookies.conf
+++ b/GetCookies.conf
@@ -1,19 +1,19 @@
 hostname =  *.bilibili.com, music.163.com, activity-1.m.duiba.com.cn, ifac*.iqiyi.com
 
 # 获取京东Cookie
-https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean - script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
+https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
 
 #bilibili
-https:\/\/(www|live)\.bilibili\.com\/?.? - script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.cookie.js
+https:\/\/(www|live)\.bilibili\.com\/?.? url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.cookie.js
 
 #neteasemusic
-https:\/\/music.163.com\/weapi\/user\/level - script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.cookie.js
+https:\/\/music.163.com\/weapi\/user\/level url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.cookie.js
 
 #haidilao
-https:\/\/activity-1\.m\.duiba\.com\.cn\/signactivity\/doSign$ - script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/haidilao/hdl.js
+https:\/\/activity-1\.m\.duiba\.com\.cn\/signactivity\/doSign$ url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/haidilao/hdl.js
 
 #iQIYI
-https?:\/\/iface(\d)?\.iqiyi\.com\/ - script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
+https?:\/\/iface(\d)?\.iqiyi\.com\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
 
 #weibotalk
-https:\/\/api\.weibo\.cn\/2\/(cardlist|page\/button) - script-request-header https://raw.githubusercontent.com/toulanboy/scripts/master/weibo/weibotalk.cookie.js
+https:\/\/api\.weibo\.cn\/2\/(cardlist|page\/button) url script-request-header https://raw.githubusercontent.com/toulanboy/scripts/master/weibo/weibotalk.cookie.js
