--- a/GetCookies.conf
+++ b/GetCookies.conf
@@ -1,4 +1,4 @@
-hostname =  *.bilibili.com, music.163.com, activity-1.m.duiba.com.cn, ifac*.iqiyi.com
+hostname =  *.bilibili.com, music.163.com, activity-1.m.duiba.com.cn, passport.iqiyi.com
 
 # 获取京东Cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
@@ -13,7 +13,8 @@ https:\/\/music.163.com\/weapi\/user\/level url script-request-body https://raw.
 https:\/\/activity-1\.m\.duiba\.com\.cn\/signactivity\/doSign$ url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/haidilao/hdl.js
 
 #iQIYI
-https?:\/\/iface(\d)?\.iqiyi\.com\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
+
+^https:\/\/passport\.iqiyi\.com\/apis\/user\/info\.action url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
 
 #weibotalk
 https:\/\/api\.weibo\.cn\/2\/(cardlist|page\/button) url script-request-header https://raw.githubusercontent.com/toulanboy/scripts/master/weibo/weibotalk.cookie.js
