--- a/GetCookies.conf
+++ b/GetCookies.conf
@@ -1,4 +1,4 @@
-hostname =  passport.iqiyi.com
+hostname =  me-api.jd.com, passport.iqiyi.com
 
 # 获取京东Cookie. 
 ^https:\/\/(api\.m|me-api)\.jd\.com\/(client\.action\?functionId=signBean|user_new\/info\/GetJDUserInfoUnion\?) url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
